my-home-cluster/argocd/network/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: infra-argocd
spec:
  ingressClassName: traefik
  tls:                                  
    - hosts:
        - argocd.kube.home
      secretName: argocd-server-tls
  rules:
  - host: argocd.kube.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
